--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "William Matthews (robophred@gmail.com)",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "@types/lodash": "^4.14.144",
+    "@types/platform": "^1.3.4",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/webpack-env": "^1.14.1",
@@ -43,8 +45,10 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "classnames": "^2.2.6",
+    "color": "^4.2.3",
     "lodash": "^4.17.15",
     "microinject": "^0.11.4",
+    "platform": "^1.3.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rxjs": "^7.5.5",
