--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/color": "^3.0.3",
     "@types/lodash": "^4.14.144",
+    "@types/pako": "^2.0.0",
     "@types/platform": "^1.3.4",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
@@ -44,11 +45,14 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.2.6",
     "color": "^4.2.3",
     "lodash": "^4.17.15",
     "microinject": "^0.11.4",
+    "pako": "^2.0.4",
     "platform": "^1.3.6",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rxjs": "^7.5.5",
