--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-fork-ref": "^1.0.0",
     "rxjs": "^7.5.5",
     "type-fest": "^2.13.0"
   }
