--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-fork-ref": "^1.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "rxjs": "^7.5.5",
     "type-fest": "^2.13.0"
   }
