--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.14.144",
     "@types/pako": "^2.0.0",
     "@types/platform": "^1.3.4",
+    "@types/random-seed": "^0.3.3",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/webpack-env": "^1.14.1",
@@ -53,6 +54,7 @@
     "pako": "^2.0.4",
     "platform": "^1.3.6",
     "query-string": "^7.1.1",
+    "random-seed": "^0.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-fork-ref": "^1.0.0",
