--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "rxjs": "^7.5.5",
-    "type-fest": "^2.13.0"
+    "type-fest": "^2.13.0",
+    "url-safe-base64": "^1.2.0"
   }
 }
